--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --recursive ./tests --watch ./modules"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,6 +15,6 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "mocha": "^6.2.0"
   }
 }
