--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "mocha": "^6.2.0"
+    "chai-http": "^4.3.0",
+    "mocha": "^6.2.0",
+    "node-mocks-http": "^1.7.6"
   }
 }
