--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^5.6.9",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "bluebird": "^3.5.5",
+    "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^6.2.0",
-    "node-mocks-http": "^1.7.6"
+    "mockgoose-fix": "^7.3.6",
+    "node-mocks-http": "^1.7.6",
+    "sinon": "^7.4.1"
   }
 }
